[gd_scene load_steps=14 format=3 uid="uid://bfl6dbw21xqs1"]

[ext_resource type="Script" path="res://addons/guide/ui/icon_maker/renderers/mouse_renderer.gd" id="1_nfude"]
[ext_resource type="Texture2D" uid="uid://cmtrnn6dmj5dw" path="res://addons/guide/ui/icon_maker/renderers/textures/mouse_2d.svg" id="2_dyhmt"]
[ext_resource type="Texture2D" uid="uid://qe42tgbl7tki" path="res://addons/guide/ui/icon_maker/renderers/textures/mouse_left.svg" id="3_8tj38"]
[ext_resource type="Texture2D" uid="uid://b0yhfghda1vjk" path="res://addons/guide/ui/icon_maker/renderers/textures/mouse_right.svg" id="4_1bioh"]
[ext_resource type="Texture2D" uid="uid://drftinn5pfbqy" path="res://addons/guide/ui/icon_maker/renderers/textures/mouse_middle.svg" id="5_wbop4"]
[ext_resource type="Texture2D" uid="uid://df1ub23rtcfp4" path="res://addons/guide/ui/icon_maker/renderers/textures/mouse_wheel_up.svg" id="6_eisfb"]
[ext_resource type="Texture2D" uid="uid://drgdglmbsw3fv" path="res://addons/guide/ui/icon_maker/renderers/textures/mouse_wheel_down.svg" id="7_kstg5"]
[ext_resource type="Texture2D" uid="uid://qte8ye0rxg7h" path="res://addons/guide/ui/icon_maker/renderers/textures/mouse_wheel_left.svg" id="8_d3mv4"]
[ext_resource type="Texture2D" uid="uid://h2700clyvlwh" path="res://addons/guide/ui/icon_maker/renderers/textures/mouse_wheel_right.svg" id="9_ym5ab"]
[ext_resource type="Texture2D" uid="uid://5mjfjmv6tsrg" path="res://addons/guide/ui/icon_maker/renderers/textures/mouse_side_a.svg" id="10_0f7ty"]
[ext_resource type="Texture2D" uid="uid://chcme14x6p640" path="res://addons/guide/ui/icon_maker/renderers/textures/mouse_side_b.svg" id="11_8777b"]
[ext_resource type="Texture2D" uid="uid://fyy00mvxgmlo" path="res://addons/guide/ui/icon_maker/renderers/textures/mouse_left_right.svg" id="12_jftk8"]
[ext_resource type="Texture2D" uid="uid://ccy200y57qpos" path="res://addons/guide/ui/icon_maker/renderers/textures/mouse_up_down.svg" id="13_t031f"]

[node name="MouseRenderer" type="MarginContainer"]
offset_right = 512.0
offset_bottom = 512.0
size_flags_horizontal = 0
script = ExtResource("1_nfude")

[node name="Mouse2D" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
texture = ExtResource("2_dyhmt")
stretch_mode = 4

[node name="MouseLeft" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_8tj38")
stretch_mode = 4

[node name="MouseRight" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("4_1bioh")
stretch_mode = 4

[node name="MouseMiddle" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("5_wbop4")
stretch_mode = 4

[node name="MouseWheelUp" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("6_eisfb")
stretch_mode = 4

[node name="MouseWheelDown" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("7_kstg5")
stretch_mode = 4

[node name="MouseWheelLeft" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("8_d3mv4")
stretch_mode = 4

[node name="MouseWheelRight" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("9_ym5ab")
stretch_mode = 4

[node name="MouseSideA" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("10_0f7ty")
stretch_mode = 4

[node name="MouseSideB" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("11_8777b")
stretch_mode = 4

[node name="MouseLeftRight" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("12_jftk8")
stretch_mode = 4

[node name="MouseUpDown" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("13_t031f")
stretch_mode = 4
